--- a/portfolio.html
+++ b/portfolio.html
@@ -25,8 +25,10 @@
       <nav class="nav-link list">
         <a href="./index.html" class="logo-link">Web<span class="logo-studio">Studio</span></a>
         <ul class="list current">
-          <li><a href="./index.html" class="link current">Студія</a></li>
-          <li><a href="./portfolio.html" class="link current">Портфоліо</a></li>
+          <li><a href="./index.html" class="link">Студія</a></li>
+          <li>
+            <a href="./portfolio.html" class="link"><span class="current">Портфоліо</span></a>
+          </li>
           <li><a class="link" href="">Контакти</a></li>
         </ul>
       </nav>
@@ -37,7 +39,7 @@
       </ul>
     </header>
     <main>
-      <h1><span class="visually-hidden">Портфоліо</span></h1>
+      <h1 class="visually-hidden">Портфоліо</h1>
       <section>
         <ul class="button list">
           <li><button type="button" class="site-button">Усі</button></li>
@@ -113,12 +115,10 @@
             >
           </li>
           <li>
-            <a class="link" href="mailto:info@devstudio.com"
-              ><span class="mailto">info@devstudio.com</span></a
-            >
+            <a class="link mailto" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li>
-            <a class="link" href="tel:+380961111111"><span class="tel">+38 096 111 11 11</span></a>
+            <a class="link tel" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
