--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
       <nav class="nav-link">
         <a href="./index.html" class="logo-link">Web<span class="logo-studio">Studio</span></a>
         <ul class="list">
-          <li><a class="link current" href="./index.html">Студія</a></li>
-          <li><a class="link current" href="./portfolio.html">Портфоліо</a></li>
+          <li>
+            <a class="link" href="./index.html"><span class="current">Студія</span></a>
+          </li>
+          <li><a class="link" href="./portfolio.html">Портфоліо</a></li>
           <li><a class="link" href="">Контакти</a></li>
         </ul>
       </nav>
